--- a/templates/index.html
+++ b/templates/index.html
@@ -12,26 +12,26 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
 		<!-- Bootstrap -->
-		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+		<link type="text/css" rel="stylesheet" href="{{url_for('static',filename = 'css/bootstrap.min.css')}}"/>
 
 		<!-- Slick -->
-		<link type="text/css" rel="stylesheet" href="css/slick.css"/>
-		<link type="text/css" rel="stylesheet" href="css/slick-theme.css"/>
-
+		<link type="text/css" rel="stylesheet" href="{{url_for('static',filename = 'css/slick.css')}}"/>
+		<link type="text/css" rel="stylesheet" href="{{url_for('static',filename = 'css/slick-theme.css')}}"/>
+ 
 		<!-- nouislider -->
-		<link type="text/css" rel="stylesheet" href="css/nouislider.min.css"/>
+		<link type="text/css" rel="stylesheet" href="{{url_for('static',filename = 'css/nouislider.min.css')}}"/>
 
 		<!-- Font Awesome Icon -->
-		<link rel="stylesheet" href="css/font-awesome.min.css">
+		<link rel="stylesheet" href="{{url_for('static',filename = 'css/font-awesome.min.css')}}">
 
 		<!-- Custom stlylesheet -->
-		<link type="text/css" rel="stylesheet" href="css/style.css"/>
+		<link type="text/css" rel="stylesheet" href="{{url_for('static',filename = 'css/style.css')}}"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js')}}"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js')}}"></script>
 		<![endif]-->
 
     </head>
@@ -63,7 +63,7 @@
 						<div class="col-md-3">
 							<div class="header-logo">
 								<a href="#" class="logo">
-									<img src="./img/logo.png" alt="">
+									<img src="{{ url_for('static', filename='./img/logo.png')}}" alt="">
 								</a>
 							</div>
 						</div>
@@ -164,7 +164,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/electricista1.png" alt="">
+												<img src="{{url_for('static', filename = './img/electricista1.png')}}" alt="">
 											</div>
 											<div class="product-body">
 												<p class="product-category">Category</p>
@@ -190,9 +190,8 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/mecanica1.png" alt="">
+												<img src="{{ url_for('static', filename='./img/mecanica1.png')}}" alt="">
 												<div class="product-label">
-													<span class="new">NEW</span>
 												</div>
 											</div>
 											<div class="product-body">
@@ -219,7 +218,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/ar_condicionado1.png" alt="">
+												<img src="{{ url_for('static', filename='./img/ar_condicionado1.png')}}" alt="">
 												<div class="product-label">
 													<span class="sale">-30%</span>
 												</div>
@@ -243,7 +242,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/contabilidade2.png" alt="">
+												<img src="{{ url_for('static', filename='./img/contabilidade2.png')}}" alt="">
 											</div>
 											<div class="product-body">
 												<p class="product-category">Category</p>
@@ -269,7 +268,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/ar_condicionado2.png" alt="">
+												<img src="{{ url_for('static', filename='./img/ar_condicionado2.png')}}" alt="">
 											</div>
 											<div class="product-body">
 												<p class="product-category">Category</p>
@@ -385,7 +384,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/electricista1.png" alt="">
+												<img src="{{ url_for('static', filename='./img/electricista1.png')}}" alt="">
 												<div class="product-label">
 												</div>
 											</div>
@@ -413,7 +412,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/pintor2.png" alt="">
+												<img src="{{ url_for('static', filename='./img/pintor2.png')}}" alt="">
 												<div class="product-label">
 												</div>
 											</div>
@@ -441,7 +440,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/canalizacao1.png" alt="">
+												<img src="{{ url_for('static', filename='./img/canalizacao1.png')}}" alt="">
 												<div class="product-label">
 												</div>
 											</div>
@@ -464,7 +463,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/mecanica1.png" alt="">
+												<img src="{{ url_for('static', filename='./img/mecanica1.png')}}" alt="">
 											</div>
 											<div class="product-body">
 												<p class="product-category">Category</p>
@@ -490,7 +489,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="./img/canalizacao2.png" alt="">
+												<img src="{{ url_for('static', filename='./img/canalizacao2.png')}}" alt="">
 											</div>
 											<div class="product-body">
 												<p class="product-category">Category</p>
@@ -546,7 +545,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product07.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product07.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -559,7 +558,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product08.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product08.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -572,7 +571,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product09.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product09.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -587,7 +586,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product01.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product01.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -600,7 +599,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product02.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product02.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -613,7 +612,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product03.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product03.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -639,7 +638,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product04.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product04.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -652,7 +651,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product05.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product05.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -665,7 +664,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product06.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product06.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -680,7 +679,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product07.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product07.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -693,7 +692,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product08.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product08.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -706,7 +705,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product09.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product09.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -734,7 +733,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product01.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product01.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -747,7 +746,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product02.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product02.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -760,7 +759,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product03.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product03.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -775,7 +774,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product04.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product04.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -788,7 +787,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/product05.png" alt="">
+										<img src="{{ url_for('static', filename='./img/product05.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -801,7 +800,7 @@
 								<!-- product widget -->
 								<div class="product-widget">
 									<div class="product-img">
-										<img src="./img/pintor1.png" alt="">
+										<img src="{{ url_for('static', filename='./img/pintor1.png')}}" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">Category</p>
@@ -913,12 +912,12 @@
 		<!-- /FOOTER -->
 
 		<!-- jQuery Plugins -->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/slick.min.js"></script>
-		<script src="js/nouislider.min.js"></script>
-		<script src="js/jquery.zoom.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="{{url_for('static',filename = 'js/jquery.min.js')}}"></script>
+		<script src="{{url_for('static',filename = 'js/bootstrap.min.js')}}"></script>
+		<script src="{{url_for('static',filename = 'js/slick.min.js')}}"></script>
+		<script src="{{url_for('static',filename = 'js/nouislider.min.js')}}"></script>
+		<script src="{{url_for('static',filename = 'js/jquery.zoom.min.js')}}"></script>
+		<script src="{{url_for('static',filename = 'js/main.js')}}"></script>
 
 	</body>
 </html>
